@@ -19,42 +19,62 @@
                           <orient>wxHORIZONTAL</orient>
                           <object class="sizeritem">
                             <object class="wxBitmapButton" name="cp_editor_previous_img">
+                          
                               
                               <bitmap stock_id="wxART_GO_BACK"></bitmap>
+                          
                               
                               <tooltip>previous image pair</tooltip>
                             </object>
+                        
                             
                             <flag>wxALL|wxEXPAND</flag>
+                        
                             
                             <border>3</border>
                           </object>
                           <object class="sizeritem">
-                            <object class="wxChoice" name="cp_editor_left_choice">
-                              
-                              <content/>
-                            </object>
+                            <object class="wxNotebook" name="cp_editor_left_tab"/>
+                        
                             
                             <option>1</option>
+                        
                             
-                            <flag>wxALL|wxEXPAND|wxALIGN_CENTRE_VERTICAL|wxADJUST_MINSIZE</flag>
+                            <flag>wxALL|wxADJUST_MINSIZE</flag>
+                        
                             
                             <border>3</border>
+                        
+                            
+                            <minsize>1,15</minsize>
+                          </object>
+                          <object class="sizeritem" platform="mac">
+                                <object class="wxChoice" name="cp_editor_left_choice" platform="mac"/>
+                                <option>0</option>
+                                <flag>wxALL|wxADJUST_MINSIZE|wxALIGN_CENTRE_VERTICAL</flag>
+                                <border>1</border>
+                                <minsize>56,15</minsize>
                           </object>
                         </object>
+                    
                         
                         <option>0</option>
+                    
                         
                         <flag>wxALL|wxEXPAND</flag>
+                    
                         
                         <border>3</border>
                   </object>
                       <object class="sizeritem">
                         <object class="unknown" name="cp_editor_left_img"/>
+                    
                         
                         <option>1</option>
+                    
                         
                         <flag>wxALL|wxEXPAND</flag>
+                    
                         
                         <border>3</border>
                   </object>
@@ -66,44 +86,64 @@
                       <object class="sizeritem">
                         <object class="wxBoxSizer">
                           <orient>wxHORIZONTAL</orient>
-                          <object class="sizeritem">
-                            <object class="wxChoice" name="cp_editor_right_choice">
-                              
-                              <content/>
-                            </object>
-                            
-                            <option>1</option>
-                            
-                            <flag>wxALL|wxEXPAND|wxALIGN_RIGHT|wxALIGN_CENTRE_VERTICAL|wxADJUST_MINSIZE</flag>
-                            
-                            <border>3</border>
+                          <object class="sizeritem" platform="mac">
+                                <object class="wxChoice" name="cp_editor_right_choice" platform="mac"/>
+                                <option>0</option>
+                                <flag>wxALL|wxADJUST_MINSIZE|wxALIGN_CENTRE_VERTICAL</flag>
+                                <border>1</border>
+                                <minsize>56,15</minsize>
                           </object>
                           <object class="sizeritem">
+                            <object class="wxNotebook" name="cp_editor_right_tab"/>
+                        
+                            
+                            <option>1</option>
+                        
+                            
+                            <flag>wxALL|wxADJUST_MINSIZE</flag>
+                        
+                            
+                            <border>3</border>
+                        
+                            
+                            <minsize>1,15</minsize>
+                      </object>
+                          <object class="sizeritem">
                             <object class="wxBitmapButton" name="cp_editor_next_img">
+                          
                               
                               <bitmap stock_id="wxART_GO_FORWARD"></bitmap>
+                          
                               
                               <tooltip>next image pair</tooltip>
                         </object>
+                        
                             
                             <flag>wxALL|wxEXPAND</flag>
+                        
                             
                             <border>3</border>
                       </object>
                         </object>
+                    
                         
                         <option>0</option>
+                    
                         
                         <flag>wxALL|wxEXPAND</flag>
+                    
                         
                         <border>3</border>
                   </object>
                       <object class="sizeritem">
                         <object class="unknown" name="cp_editor_right_img"/>
+                    
                         
                         <option>1</option>
+                    
                         
                         <flag>wxALL|wxEXPAND</flag>
+                    
                         
                         <border>3</border>
                   </object>
@@ -135,12 +175,16 @@
                         <object class="sizeritem">
                           <object class="wxListCtrl" name="cp_editor_cp_list">
                             
+                            
                             <style>wxLC_REPORT|wxLC_SINGLE_SEL|wxSUNKEN_BORDER</style>
+                            
                             
                             <bg>#DCDCDC</bg>
                           </object>
                           
+                          
                           <option>1</option>
+                          
                           
                           <flag>wxEXPAND</flag>
                         </object>
@@ -153,15 +197,19 @@
                                 <object class="sizeritem">
                                   <object class="wxStaticText">
                                     
+                                    
                                     <label>Zoom:</label>
                                   </object>
                                   
+                                  
                                   <flag>wxALL|wxALIGN_CENTRE</flag>
+                                  
                                   
                                   <border>3</border>
                                 </object>
                                 <object class="sizeritem">
                                   <object class="wxComboBox" name="cp_editor_zoom_box">
+                                    
                                     
                                     <content>
                                       <item>100%</item>
@@ -173,30 +221,40 @@
                                       <item>25%</item>
                                     </content>
                                     
+                                    
                                     <selection>1</selection>
                                     
+                                    
                                     <style>wxCB_READONLY|wxCB_DROPDOWN</style>
+                                    
                                     
                                     <bg>#DCDCDC</bg>
                                   </object>
                                   
+                                  
                                   <option>1</option>
+                                  
                                   
                                   <flag>wxALIGN_CENTRE_VERTICAL</flag>
                                 </object>
                               </object>
+                              
                               
                               <flag>wxEXPAND</flag>
                             </object>
                             <object class="sizeritem">
                               <object class="wxButton" name="cp_editor_finetune_button">
                                 
+                                
                                 <label>Fine-tune</label>
+                                
                                 
                                 <tooltip>tries to optimize the currently active point.</tooltip>
                               </object>
                               
+                              
                               <flag>wxLEFT|wxRIGHT</flag>
+                              
                               
                               <border>3</border>
                             </object>
@@ -209,34 +267,44 @@
                                     <object class="sizeritem">
                                       <object class="wxCheckBox" name="cp_editor_fine_tune_check">
                                         
+                                        
                                         <label>auto fine-&amp;tune</label>
                                       </object>
+                                      
                                       
                                       <flag>wxADJUST_MINSIZE</flag>
                                     </object>
                                     <object class="sizeritem">
                                       <object class="wxCheckBox" name="cp_editor_auto_add">
                                         
+                                        
                                         <label>auto add</label>
+                                        
                                         
                                         <checked>1</checked>
                                         
+                                        
                                         <tooltip>immediately add control point when selecting a second point</tooltip>
                                       </object>
+                                      
                                       
                                       <flag>wxADJUST_MINSIZE</flag>
                                     </object>
                                     <object class="sizeritem">
                                       <object class="wxCheckBox" name="cp_editor_auto_estimate">
                                         
+                                        
                                         <label>auto estimate</label>
+                                        
                                         
                                         <tooltip>tries to estimate shift between the images and use it while placing control points</tooltip>
                                       </object>
                                     </object>
                                   </object>
                                   
+                                  
                                   <flag>wxRIGHT</flag>
+                                  
                                   
                                   <border>3</border>
                                 </object>
@@ -244,13 +312,17 @@
                             </object>
                           </object>
                           
+                          
                           <flag>wxALL|wxEXPAND</flag>
+                          
                           
                           <border>3</border>
                         </object>
                       </object>
                       
+                      
                       <option>1</option>
+                      
                       
                       <flag>wxEXPAND</flag>
                     </object>
@@ -260,93 +332,120 @@
                         <object class="sizeritem">
                           <object class="wxStaticText">
                             
+                            
                             <label>x:</label>
                           </object>
+                          
                           
                           <flag>wxALIGN_CENTRE_VERTICAL</flag>
                         </object>
                         <object class="sizeritem">
                           <object class="wxTextCtrl" name="cp_editor_x1">
                             
+                            
                             <style>wxTE_PROCESS_ENTER|wxTE_PROCESS_TAB</style>
+                            
                             
                             <bg>#DCDCDC</bg>
                           </object>
                           
+                          
                           <flag>wxALL|wxALIGN_CENTRE_VERTICAL</flag>
+                          
                           
                           <border>3</border>
                         </object>
                         <object class="sizeritem">
                           <object class="wxStaticText">
                             
+                            
                             <label>y:</label>
                           </object>
+                          
                           
                           <flag>wxALIGN_CENTRE_VERTICAL</flag>
                         </object>
                         <object class="sizeritem">
                           <object class="wxTextCtrl" name="cp_editor_y1">
                             
+                            
                             <style>wxTE_PROCESS_ENTER|wxTE_PROCESS_TAB</style>
+                            
                             
                             <bg>#DCDCDC</bg>
                           </object>
                           
+                          
                           <flag>wxALL|wxALIGN_CENTRE_VERTICAL</flag>
+                          
                           
                           <border>3</border>
                         </object>
                         <object class="sizeritem">
                           <object class="wxStaticText">
                             
+                            
                             <label>x:</label>
                           </object>
+                          
                           
                           <flag>wxALIGN_CENTRE_VERTICAL</flag>
                         </object>
                         <object class="sizeritem">
                           <object class="wxTextCtrl" name="cp_editor_x2">
                             
+                            
                             <style>wxTE_PROCESS_ENTER|wxTE_PROCESS_TAB</style>
+                            
                             
                             <bg>#DCDCDC</bg>
                           </object>
                           
+                          
                           <flag>wxALL|wxALIGN_CENTRE_VERTICAL</flag>
+                          
                           
                           <border>3</border>
                         </object>
                         <object class="sizeritem">
                           <object class="wxStaticText">
                             
+                            
                             <label>y:</label>
                           </object>
+                          
                           
                           <flag>wxALIGN_CENTRE_VERTICAL</flag>
                         </object>
                         <object class="sizeritem">
                           <object class="wxTextCtrl" name="cp_editor_y2">
                             
+                            
                             <style>wxTE_PROCESS_ENTER|wxTE_PROCESS_TAB</style>
+                            
                             
                             <bg>#DCDCDC</bg>
                           </object>
                           
+                          
                           <flag>wxALL|wxALIGN_CENTRE_VERTICAL</flag>
+                          
                           
                           <border>3</border>
                         </object>
                         <object class="sizeritem">
                           <object class="wxStaticText">
                             
+                            
                             <label>mode:</label>
                           </object>
+                          
                           
                           <flag>wxALIGN_CENTRE_VERTICAL</flag>
                         </object>
                         <object class="sizeritem">
                           <object class="wxChoice" name="cp_editor_mode">
+                            
                             
                             <content>
                               <item>normal</item>
@@ -355,40 +454,52 @@
                             </content>
                           </object>
                           
+                          
                           <flag>wxALL|wxEXPAND|wxGROW</flag>
+                          
                           
                           <border>3</border>
                         </object>
                         <object class="sizeritem">
                           <object class="wxButton" name="cp_editor_delete">
                             
+                            
                             <label>Delete</label>
                           </object>
                           
+                          
                           <flag>wxALIGN_CENTRE_VERTICAL</flag>
+                          
                           
                           <border>3</border>
                         </object>
                         <object class="sizeritem">
                           <object class="wxButton" name="cp_editor_add">
                             
+                            
                             <label>&amp;Add</label>
+                            
                             
                             <tooltip>add a new Point</tooltip>
                           </object>
                           
+                          
                           <flag>wxALL|wxALIGN_CENTRE_VERTICAL</flag>
+                          
                           
                           <border>3</border>
                         </object>
                       </object>
+                      
                       
                       <flag>wxEXPAND</flag>
                     </object>
                   </object>
                 </object>
                 
+                
                 <option>1</option>
+                
                 
                 <flag>wxEXPAND</flag>
               </object>
@@ -399,7 +510,9 @@
           <style>wxSP_3DSASH|wxSP_NO_XP_THEME</style>
         </object>
         
+        
         <option>1</option>
+        
         
         <flag>wxEXPAND</flag>
       </object>
